User Module with only create-api
